# langkit

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitreview  .pre-commit-config.yaml  .travis.yml  LICENSE.txt  README.md  REQUIREMENTS.dev  alire.toml  manage.py  mypy.ini  pyproject.toml  requirements-github.txt  requirements-pypi.txt  setup.py
adalog/: adalog.gpr
doc/: conf.py  extension_points.rst  index.rst  internals.rst  introduction.rst  java_bindings.rst  kalint.py  lexical_envs.rst  lkt_coding_style.rst  properties_dsl.rst  textmate_grammar.rst  tutorial.rst  unparsing.rst
langkit/: __init__.py  ada_api.py  astdoc.py  auto_properties_dsl.py  c_api.py  caching.py  common.py  compile_context.py  compiled_types.py  config.py  coverage.css  coverage.py  debug_info.py  diagnostics.py  documentation.py  dsl.py  dsl_unparse.py  emitter.py  envs.py  expressions.py  fix_annotate_fields_types.py  generic_api.py  generic_interface.py  java_api.py  langkit_support.py  language_api.py  lexer.py  libmanage.py  lkt_lowering.py  names.py  ocaml_api.py  packaging.py  parsers.py  passes.py  python_api.py  railroad_diagrams.py  template_utils.py  textmate_grammar.py  unparsers.py  utils.py  (+1 more)
lkt/: .gitignore  check_bootstrap.py  langkit.yaml  nodes.lkt  parser.lkt  prelude.lkt  prelude.py  tokens.lkt
scripts/: build-langkit_support.py  create-project.py  generate-msvc-lib-file.py  interactive_testsuite  lkm  manage.sh  unparsing2lkt
sigill_handler/: README.md  langkit_sigill_handler.ads  langkit_sigill_handler.gpr
sigsegv_handler/: README.md  langkit_sigsegv_handler.ads  (+1 more)
(+5197 files in other folders)
